--- a/tests/zsspecflow.tests/zsspecflow.tests.csproj
+++ b/tests/zsspecflow.tests/zsspecflow.tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\zslib\zslib.csproj" />
+    <ProjectReference Include="..\..\zslib\zslib.csproj" />
   </ItemGroup>
 
 </Project>
