--- a/tests/zsxunit.tests/zsxunit.tests.csproj
+++ b/tests/zsxunit.tests/zsxunit.tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\zslib\zslib.csproj" />
+    <ProjectReference Include="..\..\zslib\zslib.csproj" />
   </ItemGroup>
 
 </Project>
